添加数据库连接测试

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /UnitTestProject/obj/Debug/netcoreapp3.1
 /UnitTestProject/.vs/UnitTestProject/v16/.suo
+/UnitTestProject/bin/Debug/netcoreapp3.1
+/UnitTestProject/MySql
+/UnitTestProject/.vs/UnitTestProject
