创建jenkins自动化打包单元测试

--- a/src/SimpleWebApp/appsettings.json
+++ b/src/SimpleWebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AlanConnection": "server=localhost;port=3306;database=alan;uid=root;pwd=123456;CharSet=utf8"
+    "AlanConnection": "server=localhost;port=3306;database=authdb;uid=root;pwd=12345678;CharSet=utf8"
   }
 }
